Scelta tipologia di input e creazione output nei nodi. _I collegamenti vengono ora salvati nel json della storia e ricreati al caricamento _Bisogna ancora finire i widget per specificare l'input e sistemare gli indici in seguito a eliminazione dei nodi.

--- a/author.html
+++ b/author.html
@@ -132,6 +132,9 @@
               </label>
             </div>
             
+            <div id="activity-input-div">
+            </div>
+            
           </div>
         </div>
       </div>
