Icona delle tab e altro dai

--- a/author.html
+++ b/author.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="it">
 <head>
-    <title>Author</title>
-    <meta charset="UTF-8">
-    
-    <!-- Libraries from CDN -->
+	<title>Author</title>
+	<meta charset="UTF-8">
+
+	<!-- Libraries from CDN -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link rel="icon" type="image/png" sizes="16x16" href="/public/images/icons/site16x16.ico">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
-    <!-- Internal -->
-    <link rel="stylesheet" href="/public/css/author.css">
-    <script src="/public/js/author_nodes.js"></script>
-    <script src="/public/js/author_editor.js"></script>
+
+	<!-- Internal -->
+	<link rel="stylesheet" href="/public/css/author.css">
+	<script src="/public/js/author_nodes.js"></script>
+	<script src="/public/js/author_editor.js"></script>
 </head>
 <body>
     <!-- Area principale -->
