--- a/evaluator.html
+++ b/evaluator.html
@@ -3,6 +3,7 @@
 <head>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="icon" type="image/png" sizes="16x16" href="/public/images/icons/site16x16.ico">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -10,7 +11,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<!-- Internal -->
 	<link rel="stylesheet" href="/public/css/evaluator.css">
 	<script src="/public/js/evaluator.js" charset="utf-8"></script>
