--- a/home.html
+++ b/home.html
@@ -1,35 +1,37 @@
 ﻿<!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <style type="text/css">
-        h1 {
-            padding-left: 38%;
-            padding-bottom: 20pt;
-        }
-        body {
-            padding: 10pt 10pt 10pt 10pt;
-            overflow: hidden;
-        }
-        #choice-box {
-            padding: 10% 35% 10% 35%;
-        }
-       
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="icon" type="image/png" sizes="16x16" href="/public/images/icons/site16x16.ico">
 
-    </style>
-    <script type="text/javascript">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<style type="text/css">
+		h1 {
+			padding-left: 38%;
+			padding-bottom: 20pt;
+		}
+
+		body {
+			padding: 10pt 10pt 10pt 10pt;
+			overflow: hidden;
+		}
+
+		#choice-box {
+			padding: 10% 35% 10% 35%;
+		}
+	</style>
+	<script type="text/javascript">
         function changePage(url)
         {
             window.location = url;
         }
-    </script>
+	</script>
 
-    <meta charset="utf-8" />
-    <title>M&amp;M</title>
+	<meta charset="utf-8" />
+	<title>M&amp;M</title>
 </head>
 <body>
     <h1>M&amp;M Home page</h1>
