Fixato overflow video e immagini

--- a/author.html
+++ b/author.html
@@ -281,9 +281,9 @@
     <template id="template-content-image">
         <div class="content-image">
             <div>
-                <image src="" style="max-height: 200px; max-width : 800px;">
+                <image src="">
                 
-                <label class="file-upload-label btn btn-success btn-sm">
+                <label class="file-upload-label btn btn-success btn-sm mt-1">
                     <input type="file" name="file[]" accept="image/*" style="display: none;">
                     Carica immagine
                 </label>
