--- a/player.html
+++ b/player.html
@@ -13,44 +13,29 @@
 	<script type="text/javascript">
         var player_id = 9; //TODO null e riattivare l'assegnamento 
 		var index = null;
-		var next_index = null;
+		var next_index = 0;
 		var storyJSON = null;
 		var answer = null;
-		function setBeginning(data) {
-			$('h1').text('(' + data.name + ')'); 
-			$('#nome-attivita').text(data.activities[0].name);
-			data.activities[0].contents.forEach(function (elem) {
-				if (elem.type == 'text') {
-					$('.testo-attivita').append(elem.text);
-				}
-				if (elem.type == 'video') {
-					var video = document.createElement('video');
-					var source = document.createElement('source');
-					source.setAttribute('src', elem.url);
-					video.setAttribute('width', '400');
-					video.setAttribute('controls', '');
-					video.appendChild(source);
-					$('.video').appendChild(video);
-					$('.div-grande-video').append(elem.description);
-				}
-				if (elem.type == 'image') {
-					console.log(ehi);
-					var image = document.createElement('img');
-					image.setAttribute('src', elem.url);
-					image.setAttribute('alt', elem.description);
-					image.setAttribute('width', '400');
-					$('.div-grande-img').append(elem.description);
-					$('.img').append(image);
+
+        $(document).ready(function () {
+            // richiesta storia
+            var url_string = window.location.href;
+            var url = new URL(url_string);
+            var id = url.searchParams.get("id");
+            $.ajax({
+                type: 'GET',
+                url: '/stories/' + id,
+                success: function (data) {
+                    storyJSON = data;
+                    setWindow();
+                    //setPlayer(storyJSON);
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status + ' - ' + thrownError);
                 }
-			});
-            $('#footer').append('<button id="bottone-avanti" type="button" class="btn btn-light">Avanti</button>');
-			index = 0;
-			next_index = storyJSON.activities[0].input.next_index;
-            let date = new Date();
-            let hour = date.getHours();
-            let minutes = date.getMinutes();
-            setCurrentQuestTimeStamp(hour, minutes);
-		}
+            });
+        });
+
 		function setPlayer(data) {
 			$.ajax({
 				url: '/players/create_player',
@@ -66,25 +51,7 @@
 				}
 			});
         }
-		$(document).ready(function () {
-			// richiesta storia
-            var url_string = window.location.href;
-            var url = new URL(url_string);
-            var id = url.searchParams.get("id");
-            $.ajax({
-                type: 'GET',
-                url: '/stories/' + id,
-				success: function (data) {
-					storyJSON = data;
-					setBeginning(storyJSON);
-					//setPlayer(storyJSON);
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-					alert(xhr.status + ' - ' + thrownError);
-                }
-            });
-		});
-
+		
 		// Questa funzione serve a controllare l'eventuale input dell'attività attuale
 		function checkInput() {
 			let answer_data, type;
@@ -187,27 +154,31 @@
 		}
 		//Funzione per mandare il descrittore dell'attività completata al server ed aggiungerlo al file del player
 		function sendAnswerToServer(answer_data) {
+			console.log(answer_data);	
 			$.ajax({
 				url: '/players/add_answer/player' + player_id,
 				type: 'PUT',
-				data: answer_data,
+				contentType: 'application/json',
+				data: JSON.stringify(answer_data),
 				success: function (data) {},
                 error: function (xhr, ajaxOptions, thrownError) {
                     alert(xhr.status + ' - ' + thrownError);
                 }
 			}); 
-        }
+		}
 		// Questa funzione serve a impostare la finestra per la prossima attività
 		function setWindow() {
-			console.log(next_index);
+			$('h1').text('(' + storyJSON.name + ')');
 			let mission_index = storyJSON.activities[next_index].mission_index;
 			$('#nome-attivita').text(storyJSON.activities[next_index].name);
-			$('#nome-missione').text(storyJSON.missions[mission_index].name);
+			if (mission_index != null) {
+               $('#nome-missione').text(storyJSON.missions[mission_index].name);
+            }
 			$('.testo-attivita').empty();
 			$('.to_del').remove();
 			storyJSON.activities[next_index].contents.forEach(function (elem) {
                 if (elem.type == 'text') {
-                    $('.testo-attivita').append(elem.text);
+                    $('.testo-attivita').append(elem.text + '<br>');
                 }
                 if (elem.type == 'video') {
 					var video = document.createElement('video');
@@ -238,25 +209,40 @@
 			});
 			$('#footer').empty();
             if (storyJSON.activities[next_index].input_type == 'photo') {
-				$('#footer').append('<input id="input-immagine" type="file">');
+                $('#footer').append('<label for="input-immagine" class="input custom-file-upload">'
+                    + '<span class="glyphicon glyphicon-cloud-upload"></span> Carica Foto</label >'
+                    + '<input id="input-immagine" type="file"/>');
 
             } else if (storyJSON.activities[next_index].input_type == 'number') {
-				$('#footer').append('<input id="input-num" type="number">');
+				$('#footer').append('<input id="input-num" class="input" type="number">');
             } else if (storyJSON.activities[next_index].input_type == 'text') {
                 $('#footer').append('<textarea id="input-text"');
 			}
-            $('#footer').append('<button id="bottone-avanti" type="button" class="btn btn-light">Avanti</button>');
+            $('#footer').append('<button id="bottone-avanti" class="input" type="button" class="btn btn-light">Avanti</button>');
 			let date = new Date();
 			let hour = date.getHours();
 			let minutes = date.getMinutes();
-			setCurrentQuestTimeStamp(hour, minutes);
 			index = next_index;
+            setCurrentQuest(hour, minutes);
+
 		}
-		function setCurrentQuestTimeStamp(h, m) {
+		function setCurrentQuest(h, m) {
+			let mission_index = storyJSON.activities[index].mission_index;
+			let mission_name = '';
+			if (mission_index != null) {
+				mission_name = storyJSON.missions[mission_index].name;
+			}
+			let data = {
+				minutes: m,
+				hour: h,
+				activity: storyJSON.activities[index].name,
+				mission: mission_name
+			};
 			$.ajax({
-				url: '/players/set_current_quest_time_stamp/player' + player_id, 
+				url: '/players/set_current_quest/player' + player_id, 
 				type: 'PUT',
-				data: JSON.stringify({minutes: m, hour: h}),
+				contentType: 'application/json',
+				data: JSON.stringify(data),
 				success: function () {},
 				error: function (xhr, ajaxOptions, thrownError) {
                     alert(xhr.status + ' - ' + thrownError);
@@ -264,15 +250,23 @@
 			});
         }
 		$(document).on('click', '#bottone-avanti', function () {
-		if (storyJSON.activities[index].input_type == 'photo') {
-				uploadFile($('#input_immagine').files[0]);
-		}
+			console.log(storyJSON.activities[index].input_type);
+			if (storyJSON.activities[index].input_type == 'photo') {
+				uploadFile($('#input-immagine')[0].files[0]);
+			}
+			// TODO controllare se gli input sono pieni
             checkInput();
             setWindow();
 		});
+		$(document).on('keypress', function (key) {
+			if (key.which == 13) {
+				$('#bottone-avanti').click();
+			}
+		});
 
         function uploadFile(file) {
-            let fd = new FormData();
+			let fd = new FormData();
+			console.log(file.name);
             fd.append(file.name, file);
 			let path = '/players/upload_photo/' + 'player' + player_id + '_' + index;
             $.ajax({
@@ -303,26 +297,25 @@
 			font-style: normal;
 			font-display: swap;
 		}
-		/*
-			TODO aggiustare css di input e bottone avanti in modo da separarli e centrarli 
-		*/
 		h1 {
-			font-size: 9vh;
+			font-size: 11vh;
 			text-align: center;
 			color: white;
 			margin-top: 2vh;
 			font-family: "All The Roll";
 		}
-
-		#div-grande {
-			border: 3px #007bff solid;
-			height: 70vh;
-			overflow-y: auto;
-			background-color: white;
-			width: 80%;
-			margin: auto;
-			margin-bottom:2vh;
-		}
+		/* TODO padding auto per riempire lo spazio del div grande */
+        #div-grande {
+            border: 3px #007bff solid;
+            height: 70vh;
+            overflow-y: auto;
+            background-color: white;
+            width: 80%;
+            margin: auto;
+            margin-bottom: 2vh;
+			padding: 1vh;
+            border: solid 1px black;
+        }
 
 		.bottonechat {
 			bottom: 0;
@@ -350,18 +343,11 @@
             text-align: justify;
             font-family: 'Helvetica Neue LT Std';
         }
-		#footer{
-			width:85vw;
-			margin:auto;
-			text-align:center;	
-			position: absolute;
-			bottom: 13vh;
-		}
-        #bottone-avanti {
-			font-size:2vh;
-			bottom: 0.5vh;
-			position: fixed;
-		}
+        #footer {
+            width: 100%;
+            text-align: center;
+        }
+        
         .img {
             text-align: center;
             vertical-align: middle;
@@ -376,14 +362,40 @@
 		body {
 			background-color: #007bff;
 		}
+		/*Input*/
+		.input { 
+			margin: 3vh;
+			font-size: 3vh;
+		}
+        input[type="file"] {
+            display: none;
+        }
+
+        .custom-file-upload {
+            background: white;
+            display: inline-block;
+            cursor: pointer;
+            padding: 1px 6px;
+            border: 2px outset gray;
+			font-weight:normal;
+            
+        }
+		#input-num{
+
+		}
+		#input-text{
+
+		}
+        #bottone-avanti {
+        }
 	</style>
 </head>
-<body >
+<body>
 
-    <div id="generico">
-        <button type="button" id="chat-button" class="btn btn-light bottonechat">Chat</button>
-    </div>
-    <h1></h1>
+	<div id="generico">
+		<button type="button" id="chat-button" class="btn btn-light bottonechat">Chat</button>
+	</div>
+	<h1></h1>
 	<div id="div-grande">
 
 		<!--TITOLO MISSIONE-->
@@ -404,8 +416,8 @@
 		<div class="div-grande-img">
 			<div class="img"></div>
 		</div>
-		<div id="footer">
-		</div>
+	</div>
+	<div id="footer">
 	</div>
 </body>
 </html>
